# cookiecutter-django

./: .flake8  CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml  tasks.py
.github/: dependabot.yml
{{cookiecutter.project_name}}/: .dockerignore  .editorconfig  .env.deploy.example  .env.dev.docker.example  .env.dev.example  .env.prod.example  .env.template  .flake8  .gitignore  Dockerfile  Gulpfile.mjs  README.md  docker-compose.deploy.yml  docker-compose.yml  gulpfile.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tasks.py
{{cookiecutter.project_name}}/docs/src/: gen_ref_pages.py  index.md
{{cookiecutter.project_name}}/scripts/: python_file_watchers.sh  watch_dev.sh
{{cookiecutter.project_name}}/scripts/docker/: run_dev.sh  run_prod.sh  uwsgi.ini
{{cookiecutter.project_name}}/src/: conftest.py  manage.py
{{cookiecutter.project_name}}/src/auth/: apps.py  rest.py  signals.py  views.py
{{cookiecutter.project_name}}/src/auth/locale/fr/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/auth/locale/it/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/auth/migrations/: 0001_initial_data.py
{{cookiecutter.project_name}}/src/auth/tests/: test_rest.py  tests.py
{{cookiecutter.project_name}}/src/config/: apps.py  asgi.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/src/config/admin/: __init__.py  autocomplete.py  sites.py
{{cookiecutter.project_name}}/src/config/settings/: base.py  dev.py  prod.py
{{cookiecutter.project_name}}/src/config/tests/: test_admin.py
{{cookiecutter.project_name}}/src/core/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
{{cookiecutter.project_name}}/src/core/locale/fr/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/core/locale/it/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/core/migrations/: 0001_initial.py  0002_initial_data.py
{{cookiecutter.project_name}}/src/core/rest/v1/: urls.py  views.py
{{cookiecutter.project_name}}/src/core/templates/core/: 400.html  403.html  404.html  500.html  index.html
{{cookiecutter.project_name}}/src/core/tests/: conftest.py  test_rest.py  tests.py
{{cookiecutter.project_name}}/src/frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
{{cookiecutter.project_name}}/src/frontend/src/: index.html  main.ts
{{cookiecutter.project_name}}/src/frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
{{cookiecutter.project_name}}/src/frontend/src/app/store/: app.reducer.ts
{{cookiecutter.project_name}}/src/locale/de/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/locale/fr/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/static/admin/css/: fonts.css  {{cookiecutter.project_slug}}.scss
{{cookiecutter.project_name}}/src/static/admin/css/components/: _footer.scss  _typography.scss
{{cookiecutter.project_name}}/src/static/admin/js/: jquery.init.js
{{cookiecutter.project_name}}/src/static/{{cookiecutter.project_slug}}/css/components/: _typography.scss
{{cookiecutter.project_name}}/src/static/{{cookiecutter.project_slug}}/js/utils/: download-text.ts
{{cookiecutter.project_name}}/src/templates/admin/: base.html
{{cookiecutter.project_name}}/src/templates/drf_spectacular/: swagger_ui.html
{{cookiecutter.project_name}}/src/templates/registration/: lockout.html
{{cookiecutter.project_name}}/src/templates/{{cookiecutter.project_slug}}/: base.html  base_site.html  site.webmanifest
{{cookiecutter.project_name}}/src/templates/{{cookiecutter.project_slug}}/includes/: favicon.html
{{cookiecutter.project_name}}/src/templatetags/: {{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/src/users/: admin.py  apps.py  fields.py  forms.py  models.py
{{cookiecutter.project_name}}/src/users/locale/fr/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/users/locale/it/LC_MESSAGES/: django.po
{{cookiecutter.project_name}}/src/users/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/src/users/static/users/css/widgets/: token.css
{{cookiecutter.project_name}}/src/users/static/users/js/widgets/: token.js
{{cookiecutter.project_name}}/src/users/templates/users/widgets/: token.html
{{cookiecutter.project_name}}/src/users/tests/: conftest.py  tests.py
{{cookiecutter.project_name}}/src/utils/: datetime.py  main.py  migrations.py  typing.py
{{cookiecutter.project_name}}/src/utils/tests/: tests.py
