[tool.poetry]
name = "sgelis-cookiecutter-django"
version = "0.0.0"
description = "Opinionated cookiecutter for Django projects"
license = "GPL-3.0-or-later"
authors = ["Sébastien Gélis"]
readme = "README.md"
repository = "https://github.com/sgelis/cookiecutter-django"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
invoke = "^2.0.0"
isort = "^5.11.2"
mypy = "^0.990"
types-requests = "^2.28.11.2"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
